# execu-tools

./: .cursorignore  .gitignore  .gitmodules  DesignReasoning.md  LICENSE  README.md  export_copy_slicing_bug.pte  filename.txt  main.py  requirements-dev.txt  setup.sh
cpp/: CMakeLists.txt
cpp/include/ExecuTools/: encoder_decoder_runner.h  multi_entry_point_runner.h  shared_memory_manager.h  string_tokenizer.h
cpp/include/ExecuTools/utils/: string_helpers.h
cpp/src/: CMakeLists.txt  constant_method_utils.cpp  constant_method_utils.h  encoder_decoder_runner.cpp  multi_entry_point_runner.cpp  reserved_fn_names.cpp  reserved_fn_names.h  shared_memory_manager.cpp  string_tokenizer.cpp
cpp/src/utils/: CMakeLists.txt  string_helpers.cpp
cpp/test/: CMakeLists.txt  ExecuToolsTestDirs.h.in  manual_encoder_decoder_runner.cpp  test_executorch.cpp  test_executorch_manual.cpp  test_shared_memory_manager.cpp
execu_tools/: encoder_decoder_export.py
python/: README.md  pyproject.toml
python/docs/: README.md  Rational.md
python/execu_tools/: decoder_export.py  encoder_decoder_export.py  memory_planning_notes.md  model_exporter.py  tokenizer_converters.py  tokenizer_export.py  wrapper_base.py
python/tests/: export_buffer_mutation_bug.py  export_copy_slicing_bug.py  manual_encoder_decoder_export.py  manual_test_model_export.py  pytest.ini  test_encoder_decoder_export.py  test_export_behavior.py  test_model_export.py  test_multi_entry_point_exporter.py  test_tokenizer_converters.py  test_tokenizer_export.py
python/tests/sample_files/: english_tokenization_test.txt
python/tests/understanding_tests/: playground_export_behavior.py
tests/: test_encoder_decoder_export.py  test_model_export.py
