[tool.poetry]
name = "execu-tools"
version = "0.1.0"
description = ""
authors = ["cptspacemanspiff <19273992+cptspacemanspiff@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sentencepiece = "^0.2.0"
protobuf = "^5.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
